--- a/index.html
+++ b/index.html
@@ -1,116 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Zenstores Homepage</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  .category-select, .orders-slider {
-    margin-bottom: 20px;
-  }
-  .persona-message {
-    font-size: 1.25em;
-    margin-bottom: 20px;
-  }
-  .business-info {
-    margin-top: 30px;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-  }
-  .business-name {
-    font-weight: bold;
-    font-size: 1.1em;
-  }
-  .quote {
-    font-style: italic;
-    margin-top: 5px;
-    color: #555;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Zenstores Homepage with Calculator</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div class="container">
-  <div class="category-select">
-    <label for="category">Select your business category:</label>
-    <select id="category">
-      <option value="fashion">Fashion</option>
-      <option value="food">Food & Drink</option>
-      <option value="beauty">Beauty & Fitness</option>
-      <option value="other">Other</option>
-    </select>
+  <div class="page-container">
+    <!-- Left side: simplified homepage intro -->
+    <section class="homepage-intro">
+      <h1>Upgrade your shipping. <br /><em><strong>From checkout to dispatch.</strong></em></h1>
+      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
+
+      <div class="buttons-row">
+        <button class="btn get-started">Get Started</button>
+        <button class="btn see-action">See it in action</button>
+      </div>
+
+      <div class="reviews-row">
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store Reviews" />
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra Reviews" />
+      </div>
+    </section>
+
+    <!-- Right side: calculator widget -->
+    <section class="calculator-container">
+      <div class="calculator current-logic">
+        <h2>Are we a good fit?</h2>
+
+        <!-- Business category selector -->
+        <div class="business-category">
+          <p>Select your business category:</p>
+          <div class="category-buttons">
+            <button data-category="Fashion" class="category-btn selected" title="Fashion">
+              👗<br /><span>Fashion</span>
+            </button>
+            <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
+              🍔<br /><span>Food & Drink</span>
+            </button>
+            <button data-category="Beauty & Fitness" class="category-btn" title="Beauty & Fitness">
+              💄<br /><span>Beauty & Fitness</span>
+            </button>
+            <button data-category="Other" class="category-btn" title="Other">
+              🏡<br /><span>Other</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- Monthly orders slider -->
+        <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
+        <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
+
+         <!-- Persona message below category -->
+        <div id="personaMessage" class="persona-box"></div>
+
+        <!-- Persona-specific challenges -->
+<h3>Challenges you may face</h3>
+<ul id="challengesContainer" class="challenges-list"></ul>
+
+        <!-- Similar businesses we've helped -->
+        <h3>Similar businesses we've helped</h3>
+        <div id="similarBusinesses" class="similar-businesses-container"></div>
+      </div>
+    </section>
   </div>
 
-  <div class="orders-slider">
-    <label for="orders">Monthly Orders: <span id="ordersValue">1000</span></label>
-    <input type="range" id="orders" min="0" max="5000" step="100" value="1000" />
-  </div>
-
-  <div id="personaMessage" class="persona-message"></div>
-
-  <div class="business-info">
-    <div id="businessName" class="business-name"></div>
-    <div id="quote" class="quote"></div>
-  </div>
-</div>
-
-<script>
-  const categorySelect = document.getElementById('category');
-  const ordersSlider = document.getElementById('orders');
-  const ordersValue = document.getElementById('ordersValue');
-  const personaMessage = document.getElementById('personaMessage');
-  const businessName = document.getElementById('businessName');
-  const quote = document.getElementById('quote');
-
-  const data = {
-    fashion: {
-      persona: 'Fashion Founder',
-      business: "Alex's Accessories",
-      quote: "I used to dread busy periods. Zenstores handles them effortlessly now."
-    },
-    food: {
-      persona: 'Food & Drink Entrepreneur',
-      business: "Bella's Bakery",
-      quote: "Zenstores helped me keep track of all my orders, even on the busiest days."
-    },
-    beauty: {
-      persona: 'Beauty & Fitness Pro',
-      business: "Clara's Cosmetics",
-      quote: "Managing my inventory used to be stressful. Zenstores makes it simple."
-    },
-    other: {
-      persona: 'Entrepreneur',
-      business: "Sam's Shop",
-      quote: "Zenstores saves me time so I can focus on growing my business."
-    }
-  };
-
-  function updateUI() {
-    const category = categorySelect.value;
-    const orders = ordersSlider.value;
-    ordersValue.textContent = orders;
-
-    const persona = data[category];
-    // Show only "You're a [persona]" here
-    personaMessage.innerHTML = `You're a <strong>${persona.persona}</strong>`;
-
-    // Show business name and quote together at the bottom
-    businessName.textContent = persona.business;
-    quote.textContent = `"${persona.quote}"`;
-  }
-
-  categorySelect.addEventListener('change', updateUI);
-  ordersSlider.addEventListener('input', updateUI);
-
-  // Initialize UI on page load
-  updateUI();
-</script>
+  <script src="script.js"></script>
 </body>
 </html>
+
+JS: const personaData = {
+  "Food & Drink": [
+    {
+      maxOrders: 1000,
+      persona: "Food & Drink Startup",
+      businessExample: "Alex's Apples",
+      challenges: ["📦 Managing storage for perishable goods", "⏱ Fulfilling orders quickly during peak demand", "💰 Keeping delivery costs low for small orders"],
+      quote: "Zenstores helped us streamline everything from packaging to dispatch. It was a game-changer for our small team."
+    },
+    {
+      maxOrders: 5000,
+      persona: "Taste Explorer",
+      businessExample: "Tom's Tomatoes",
+      challenges: ["📦 Managing rapid growth", "⏱ Juggling multiple courier services", "💰 Avoiding missed deliveries"],
+      quote: "As we scaled, Zenstores scaled with us. It's like having a fulfilment assistant built into our operations."
+    },
+    {
+      maxOrders: Infinity,
+      persona: "Food Industry Leader",
+      businessExample: "Mikey's Munch",
+      challenges: ["📦 Multi-site dispatch management", "⏱ High-volume peak periods", "💰 Streamlining courier integrations"],
+      quote: "Zenstores keeps our logistics efficient even on our busiest weeks. It’s our secret weapon."
+    }
+  ],
+  "Beauty & Fitness": [
+    {
+      maxOrders: 1000,
+      persona: "Beauty Beginner",
+      businessExample: "Alex's Algae",
+      challenges: ["🧴 Packing small, fragile items", "🚚 Choosing the right shipping options", "📊 Understanding customer delivery expectations"],
+      quote: "Zenstores made it easy to turn fulfilment from a stress into a strength. Highly recommend!"
+    },
+    {
+      maxOrders: 5000,
+      persona: "Health Enthusiast",
+      businessExample: "Tom's Training",
+      challenges: ["🧴 Managing varied SKUs", "🚚 Next-day delivery coordination", "📊 Balancing service and speed"],
+      quote: "Shipping used to be the bottleneck. Now it’s one of our strongest points thanks to Zenstores."
+    },
+    {
+      maxOrders: Infinity,
+      persona: "Industry Icon",
+      businessExample: "Mikey's Mascara",
+      challenges: ["🧴 Handling thousands of daily orders", "🚚 Maintaining fast dispatch at scale", "📊 Centralising fulfilment analytics"],
+      quote: "With Zenstores, we fulfil faster, analyse better, and support more customers every day."
+    }
+  ],
+  "Fashion": [
+    {
+      maxOrders: 1000,
+      persona: "Fashion Founder",
+      businessExample: "Alex's Accessories",
+      challenges: ["👗 High return rates", "📦 Managing varied stock sizes", "⏱ Dispatching promo campaign orders"],
+      quote: "I used to dread busy periods. Zenstores handles them effortlessly now."
+    },
+    {
+      maxOrders: 5000,
+      persona: "Style Seller",
+      businessExample: "Tom's Threads",
+      challenges: ["👗 Multi-size inventory", "📦 Complex order bundling", "⏱ Limited packing space"],
+      quote: "Zenstores has helped us cut down fulfilment time and improve delivery consistency."
+    },
+    {
+      maxOrders: Infinity,
+      persona: "Trend Leader",
+      businessExample: "Mikey's Moda",
+      challenges: ["👗 International shipping coordination", "📦 Real-time stock tracking", "⏱ High daily order volumes"],
+      quote: "Zenstores allows our ops team to focus on growth, not admin."
+    }
+  ],
+  "Other": [
+    {
+      maxOrders: 1000,
+      persona: "Online Entrepreneur",
+      businessExample: "Alex's Art Supplies",
+      challenges: ["📦 Niche packaging needs", "⏱ Organising solo dispatch", "💰 Avoiding courier overcharges"],
+      quote: "The setup was quick and the impact was instant. Zenstores just works."
+    },
+    {
+      maxOrders: 5000,
+      persona: "Growing Operator",
+      businessExample: "Tom's Tools",
+      challenges: ["📦 Inventory accuracy", "⏱ Managing fulfilment alongside daily ops", "💰 Keeping fulfilment lean"],
+      quote: "It’s like having a fulfilment team without needing to hire one."
+    },
+    {
+      maxOrders: Infinity,
+      persona: "Scaling Brand",
+      businessExample: "Mikey's Market",
+      challenges: ["📦 Scaling physical space", "⏱ Dispatching across channels", "💰 Forecasting courier costs"],
+      quote: "Zenstores keeps everything ticking. We’ve grown twice as fast with it in place."
+    }
+  ]
+};
+
+const categoryButtons = document.querySelectorAll('.category-btn');
+const orderSlider = document.getElementById('orders');
+const orderValueDisplay = document.getElementById('orderValue');
+const personaMessage = document.getElementById('personaMessage');
+const challengesContainer = document.getElementById('challengesContainer');
+const similarBusinesses = document.getElementById('similarBusinesses');
+
+let selectedCategory = "Fashion";
+
+function updateCalculator() {
+  const orderCount = parseInt(orderSlider.value, 10);
+  orderValueDisplay.textContent = orderCount;
+
+  const data = personaData[selectedCategory];
+  const persona = data.find(p => orderCount <= p.maxOrders);
+
+  // Update persona message with quote
+  personaMessage.innerHTML = You're a <strong>${persona.persona}</strong><br/><em>"${persona.quote}"</em>;
+
+  // Update challenges
+  challengesContainer.innerHTML = "";
+  persona.challenges.forEach(challenge => {
+    const li = document.createElement("li");
+    li.textContent = challenge;
+    challengesContainer.appendChild(li);
+  });
+
+  // Update similar businesses
+  similarBusinesses.innerHTML = "";
+  const exampleDiv = document.createElement("div");
+  exampleDiv.classList.add("business-box");
+  exampleDiv.textContent = persona.businessExample;
+  similarBusinesses.appendChild(exampleDiv);
+}
+
+// Event listeners
+categoryButtons.forEach(btn => {
+  btn.addEventListener('click', () => {
+    categoryButtons.forEach(b => b.classList.remove('selected'));
+    btn.classList.add('selected');
+    selectedCategory = btn.dataset.category;
+    updateCalculator();
+  });
+});
+
+orderSlider.addEventListener('input', updateCalculator);
+
+// Initial call
+updateCalculator();
