--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <!-- Monthly orders slider -->
+        <!-- Monthly Shipment Volume -->
         <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
         <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
 
