--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <!-- Monthly Shipment Volume -->
         <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
         <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
-
-        <!-- Persona-specific challenges -->
+        
+<!-- Persona-specific challenges -->
+<p id="personaMessage" class="persona-message"></p>
 <h3>Challenges you may face</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
 
