--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <div class="business-category">
           <p>Select your business category:</p>
           <div class="category-buttons">
-            <button data-category="Fashion" class="category-btn selected" title="Fashion">
-              👗<br /><span>Fashion</span>
+            <button data-category="Fashion & Apparel" class="category-btn selected" title="Fashion & Apparel">
+              👗<br /><span>Fashion & Apparel</span>
             </button>
             <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
               🍔<br /><span>Food & Drink</span>
             </button>
-            <button data-category="Beauty & Fitness" class="category-btn" title="Beauty & Fitness">
-              💄<br /><span>Beauty & Fitness</span>
+            <button data-category="Health & Beauty" class="category-btn" title="Health & Beauty">
+              💄<br /><span>Health & Beauty</span>
             </button>
             <button data-category="Other" class="category-btn" title="Other">
               🏡<br /><span>Other</span>
