--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
           </div>
         </div>
 
-        <!-- Monthly orders -->
-        <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
-        <input type="range" id="orders" min="0" max="112" value="0" />
+      <!-- Monthly orders -->
+<label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
+<input type="range" id="orders" min="0" max="112" value="0" />
 
-        <p id="personaMessage" class="persona-message"></p>
-        <h3>Challenges you may face</h3>
-        <ul id="challengesContainer" class="challenges-list"></ul>
+<p id="personaMessage" class="persona-message"></p>
+<h3>Challenges you may face</h3>
+<ul id="challengesContainer" class="challenges-list"></ul>
 
-        <!-- Similar business -->
-        <h3>Similar businesses we've helped</h3>
-        <div id="similarBusinesses" class="similar-businesses-container"></div>
-      </div>
-    </section>
-  </div>
+<!-- NEW: Size of the problem line -->
+<div id="problemSize" class="problem-size-line">Size of the problem: £0</div>
+
+<!-- Similar business -->
+<h3>Similar businesses we've helped</h3>
+
 
   <script src="script.js"></script>
 </body>
