--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
 <h3>Challenges you may face</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
 
-<!-- NEW: Size of the problem line -->
-<div id="problemSize" class="problem-size-line">Size of the problem: £0</div>
+<p id="size-of-problem" class="problem-size-line"></p>
 
-<!-- Similar business -->
 <h3>Similar businesses we've helped</h3>
 
 
