--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p id="size-of-problem" class="problem-size-line"></p>
 
 <h3>Similar businesses we've helped</h3>
-
+<div id="similarBusinesses" class="similar-businesses-container"></div>
 
   <script src="script.js"></script>
 </body>
