--- a/index.html
+++ b/index.html
@@ -48,19 +48,22 @@
           </div>
         </div>
 
-      <!-- Monthly orders -->
-<label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
-<input type="range" id="orders" min="0" max="112" value="0" />
+        <!-- Monthly orders -->
+        <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
+        <input type="range" id="orders" min="0" max="112" value="0" />
 
-<p id="personaMessage" class="persona-message"></p>
-<h3>Challenges you may face</h3>
-<ul id="challengesContainer" class="challenges-list"></ul>
+        <p id="personaMessage" class="persona-message"></p>
+        <h3>Challenges you may face</h3>
+        <ul id="challengesContainer" class="challenges-list"></ul>
 
-<p id="size-of-problem" class="problem-size-line"></p>
+        <p id="size-of-problem" class="problem-size-line"></p>
 
-<h3>Similar businesses we've helped</h3>
-<div id="similarBusinesses" class="similar-businesses-container"></div>
-
+        <h3>Similar businesses we've helped</h3>
+        <div id="similarBusinesses" class="similar-businesses-container"></div>
+      </div> <!-- close .calculator -->
+    </section> <!-- close .calculator-container -->
+  </div> <!-- close .page-container -->
+  
   <script src="script.js"></script>
 </body>
 </html>
