--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3>Challenges you may face</h3>
         <ul id="challengesContainer" class="challenges-list"></ul>
 
-        <p id="size-of-problem" class="problem-size-line"></p>
+<p id="size-of-problem" data-value="0">Size of the prize: <span>£0</span></p>
 
         <h3>Similar businesses we've helped</h3>
         <div id="similarBusinesses" class="similar-businesses-container"></div>
