--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
 <input type="range" id="orders" min="0" max="40" step="1" />
 
         <p id="personaMessage" class="persona-message"></p>
+        
         <h3>Challenges you may face</h3>
-        <ul id="challengesContainer" class="challenges-list"></ul>
+<ul id="challengesContainer" class="challenges-list"></ul>
 
 <p id="size-of-problem" data-value="0">Size of the prize: <span>£0</span></p>
 
-        <h3>Similar businesses we've helped</h3>
+<h3>Your quirks</h3>
+<ul id="quirksContainer" class="quirks-list"></ul>
+
+<h3>Similar businesses we've helped</h3>
+
         <div id="similarBusinesses" class="similar-businesses-container"></div>
       </div> <!-- close .calculator -->
     </section> <!-- close .calculator-container -->
