--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
         <h3>Challenges you may face</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
 
-<p id="size-of-problem" data-value="0">Size of the prize: <span>£0</span></p>
+<div id="size-of-problem" class="revenue-uplift-box" data-value="0">
+  <p class="uplift-label">Estimated yearly revenue uplift</p>
+  <div class="uplift-amount">
+    <span class="arrow-icon">📈</span>
+    <span class="amount">£0</span>
+  </div>
+</div>
 
 <h3>Your quirks</h3>
 <ul id="quirksContainer" class="quirks-list"></ul>
