--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
   <p class="uplift-label">Estimated yearly revenue uplift</p>
   <div class="uplift-amount">
-    <span class="arrow-icon">📈</span>
+    <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M6 14L18 2M18 2H10M18 2V10" stroke="#1c9b58" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
     <span class="amount">£0</span>
   </div>
 </div>
