--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <p id="personaMessage" class="persona-message"></p>
         
-        <h3>Challenges you may face</h3>
+        <h3>The hidden hurdles slowing down your business growth</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
 
 <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
