--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Right side: calculator -->
     <section class="calculator-container">
       <div class="calculator current-logic">
-        <h2>What about your business?</h2>
+        <h2>Who is this for?</h2>
 
         <!-- Category -->
         <div class="business-category">
