--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
 <input type="range" id="orders" min="0" max="40" step="1" />
         
-        <h3>The hidden hurdles slowing down your business growth</h3>
+        <h3>The hidden hurdles slowing down your business:</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
 
 <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
