--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <ul id="challengesContainer" class="challenges-list"></ul>
 
 <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
-  <p class="uplift-label">Estimated yearly revenue uplift</p>
+  <p class="uplift-label">Estimated yearly revenue missed</p>
   <div class="uplift-amount">
     <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M6 14L18 2M18 2H10M18 2V10" stroke="#1c9b58" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
