--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p class="uplift-label">Estimated yearly revenue missed</p>
   <div class="uplift-amount">
     <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M6 14L18 2M18 2H10M18 2V10" stroke="#1c9b58" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M6 6L18 18M18 18H10M18 18V10" stroke="#C41E3A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
     <span class="amount">£0</span>
   </div>
