--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 </div>
 
-<h3>Your quirks</h3>
+<h3 id="quirksHeading">Your quirks</h3>
 <ul id="quirksContainer" class="quirks-list"></ul>
 
 <h3>Similar businesses we've helped</h3>
