--- a/index.html
+++ b/index.html
@@ -29,28 +29,30 @@
       <div class="calculator current-logic">
         <h2>Why should you care?</h2>
 
-        <!-- Category -->
-        <div class="business-category">
-          <p>Select your business category:</p>
-          <div class="category-buttons">
-            <button data-category="Fashion & Apparel" class="category-btn selected" title="Fashion & Apparel">
-              👗<br /><span>Fashion & Apparel</span>
-            </button>
-            <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
-              🍔<br /><span>Food & Drink</span>
-            </button>
-            <button data-category="Health & Beauty" class="category-btn" title="Health & Beauty">
-              💄<br /><span>Health & Beauty</span>
-            </button>
-            <button data-category="Other" class="category-btn" title="Other">
-              🏡<br /><span>Other</span>
-            </button>
-          </div>
-        </div>
+       <div id="interactive-area">
+  <!-- Category -->
+  <div class="business-category">
+    <p>Select your business category:</p>
+    <div class="category-buttons">
+      <button data-category="Fashion & Apparel" class="category-btn selected" title="Fashion & Apparel">
+        👗<br /><span>Fashion & Apparel</span>
+      </button>
+      <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
+        🍔<br /><span>Food & Drink</span>
+      </button>
+      <button data-category="Health & Beauty" class="category-btn" title="Health & Beauty">
+        💄<br /><span>Health & Beauty</span>
+      </button>
+      <button data-category="Other" class="category-btn" title="Other">
+        🏡<br /><span>Other</span>
+      </button>
+    </div>
+  </div>
 
-        <!-- Monthly orders -->
-        <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
-<input type="range" id="orders" min="0" max="40" step="1" />
+  <!-- Monthly orders -->
+  <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
+  <input type="range" id="orders" min="0" max="40" step="1" />
+</div>
         
         <h3>The hidden hurdles holding back growth:</h3>
 <ul id="challengesContainer" class="challenges-list"></ul>
