--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <!-- Monthly orders -->
           <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
           <input type="range" id="orders" min="0" max="40" step="1" />
-        </div>
+<hr class="divider" />
 
         <h3>The hidden hurdles holding back growth:</h3>
         <ul id="challengesContainer" class="challenges-list"></ul>
@@ -67,6 +67,8 @@
             <span class="amount">£0</span>
           </div>
         </div>
+
+          <hr class="divider" />
 
         <h3 id="quirksHeading">Your quirks</h3>
         <ul id="quirksContainer" class="quirks-list"></ul>
