--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <hr class="divider" />
 
-        <h3>The hidden hurdles holding back growth:</h3>
+        <h3>The hidden hurdles holding back your growth:</h3>
         <ul id="challengesContainer" class="challenges-list"></ul>
 
         <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
