--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
           <!-- Monthly orders -->
           <label for="orders">Monthly Shipment Volume: <span id="orderValue">250</span></label>
           <input type="range" id="orders" min="0" max="40" step="1" />
+          
+</div>
+<!-- End glow container -->
+          
 <hr class="divider" />
 
         <h3>The hidden hurdles holding back growth:</h3>
