--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul id="challengesContainer" class="challenges-list"></ul>
 
         <div id="size-of-problem" class="revenue-uplift-box" data-value="0">
-          <p class="uplift-label">Estimated yearly revenue missed</p>
+          <p class="uplift-label">Estimated yearly missed revenue</p>
           <div class="uplift-amount">
             <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6 6L18 18M18 18H10M18 18V10" stroke="#C41E3A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
